--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,7 +36,7 @@
 
 // Use modal & lightbox component styles
 @use 'utils/modal';
-
+@use 'utils/skip-link';
 @use 'utils/lightbox';
 
 // Use bio page/component styles
