--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -9,14 +9,9 @@
 @use '../abstracts/variables' as *;
 @use '../abstracts/mixins' as *;
 
-//playfair
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&display=swap");
-// inter 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap");
-//dm sans
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@900&display=swap");
-//trajan
-@import url("https://use.typekit.net/njn2mng.css");
+// Google Fonts and TypeKit loaded via HTML link tags for better performance
+// Using preload + media attribute trick to prevent render blocking
+// See index.html for implementation
 
 
 
