--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,6 +23,9 @@
 // Use header styles
 @use 'base/header';
 
+// Use dark mode styles
+@use 'base/dark-mode';
+
 // Use footer styles
 @use 'base/footer';
 
