--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  background: url(../assets/images/bodyBG.gif) repeat center top !important;
+  background: $background-light !important;
   margin: 0;
   color: #333;
   margin: 0;
